--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
 
       - name: Configure Git
         if: ${{ success() }}
+        shell: pwsh
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
