--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ jobs:
   build:
     runs-on: windows-latest
     environment: dev
-
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v2
 
@@ -19,7 +20,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-
+          token: ${{ secrets.GH_TOKEN }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
