--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,4 +106,4 @@ jobs:
         env:
           GH_PATNEW: ${{ secrets.GH_PATNEW }}
         run: |
-          gh pr create --base main --head $branchName --title "`"Automated changes by Azure Cost Optimizer`"" --body "`"This PR contains automated changes by the Azure Cost Optimizer.`"" --label "notification"
+          gh pr create --base main --head $branchName --title '"Automated changes by Azure Cost Optimizer"' --body '"This PR contains automated changes by the Azure Cost Optimizer."' --label "notification"
