--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,16 @@ on:
   
 
 jobs:
-  build:
+   build:
     runs-on: windows-latest
     environment: dev
-    permissions:
-      contents: write
+    permissions: write-all
     steps:
       - uses: actions/checkout@v2
-
+      - name: Get registration token
+        id: getRegToken
+        run: |
+          curl -X POST -H \"Accept: application/vnd.github.v3+json\"  -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' https://api.github.com/repos/myprofile/myrepo/actions/runners/registration-token
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
