--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          $branchName = "ACO-$((Get-Date).ToString('yyyyMMddHHmmss'))"
+          $branchName = "azurecostoptimizer/dry-run-$((Get-Date).ToString('yyyyMMddHHmmss'))"
           git checkout -b $branchName
           git add impacted_resources.txt
           git add cost_trend_*.png
@@ -104,12 +104,3 @@ jobs:
         shell: pwsh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
-      # - name: Create Pull Request
-      #   if: ${{ success() }}
-      #   shell: pwsh
-      #   env:
-      #     GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      #   run: |
-      #     $branchName = "cost-optimization-changes-$(date -u +%Y%m%d%H%M%S)"
-      #     git checkout -b $branchName
-      #     gh pr create --base main --head $branchName --title `"Automated changes by Azure Cost Optimizer"` --body `"This PR contains automated changes by the Azure Cost Optimizer."` --label "notification"
