--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,7 +103,7 @@ jobs:
           if (Test-Path -Path "./impacted_resources.txt") {
             $owner = (Get-Item -Path ./impacted_resources.txt).BaseName -replace 'impacted_resources_', ''
             Write-Output "Creating issue for owner: $owner"
-            $title = "Azure Cost Optimization Results for $owner"
+            $title = "Azure Cost Optimization Results for $owner -$((Get-Date).ToString('yyyyMMddHHmmss'))"
             gh issue create --title "$title" --body-file "./impacted_resources.txt" --label "notification"
           } else {
             Write-Output "File 'impacted_resources.txt' does not exist. Skipping issue creation."
