--- a/.github/workflows/issue-notifier.yml
+++ b/.github/workflows/issue-notifier.yml
@@ -4,6 +4,10 @@ on:
   issues:
     types: [opened]
 
+permissions:
+  issues: write
+  contents: read
+
 jobs:
   mention-owner:
     runs-on: ubuntu-latest
@@ -23,6 +27,6 @@ jobs:
           issue-number: ${{ github.event.issue.number }}
           body: |
             @${{ steps.extract_details.outputs.owner }} A new issue has been created with the following details:
-            - **Policy**: ${{ github.event.issue.body | fromJson | .Policy }}
-            - **Resource**: ${{ github.event.issue.body | fromJson | .Resource }}
-            - **Actions**: ${{ github.event.issue.body | fromJson | .A
+            - **Policy**: $(echo "${{ github.event.issue.body }}" | grep -oP '(?<=Policy": ")[^"]+')
+            - **Resource**: $(echo "${{ github.event.issue.body }}" | grep -oP '(?<=Resource": ")[^"]+')
+            - **Actions**: $(echo "${{ github.event.issue.body }}" | grep -oP '(?<=Actions": ")[^"]+')
