Update ci.yml added create issue id
Signed-off-by: Jamel Achahbar <127963872+jamelachahbar@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,7 @@ jobs:
           }
 
       - name: Check and Create GitHub Issue
+        id: create_issue
         run: |
           if (Test-Path -Path "./impacted_resources.txt") {
             $owner = (Get-Item -Path ./impacted_resources.txt).BaseName -replace 'impacted_resources_', ''
