--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
             $owner = (Get-Item -Path ./impacted_resources.txt).BaseName -replace 'impacted_resources_', ''
             Write-Output "Creating issue for owner: $owner"
             $title = "Azure Cost Optimization Results for $owner -$((Get-Date).ToString('yyyyMMddHHmmss'))"
-            $issue_url = gh issue create --title "$title" --body-file "./impacted_resources.txt" --label "notification" --json "url" | ConvertFrom-Json
+            $issue_url = gh issue create --title "$title" --body-file "./impacted_resources.txt" --label "notification" | ConvertFrom-Json
             Write-Output "::set-output name=issue_url::$issue_url.url"
           } else {
             Write-Output "File 'impacted_resources.txt' does not exist. Skipping issue creation."
