--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -7,11 +7,14 @@
         "@emotion/styled": "^11.6.0",
         "@mui/material": "^5.2.3",
         "axios": "^0.24.0",
+        "chart.js": "^4.4.3",
         "cross-env": "^7.0.3",
         "react": "^17.0.2",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
         "recharts": "^2.1.6",
+        "socket.io-client": "^4.7.5",
         "typescript": "^4.4.4"
     },
     "scripts": {
